log
Thu 23 Mar 2023 03:01:11 PM UTC: 
 tests:  0|6
total_score: 0/70
6395e62
Thu 23 Mar 2023 10:07:39 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:40: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   32 |   List *lista = (List *) malloc(sizeof(list));
      |                                        ^~~~
      |                                        List
list.c:32:40: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c612580
Thu 23 Mar 2023 10:07:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f59a849
Thu 23 Mar 2023 10:14:35 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: invalid initializer
   40 |   Node nodo = (List *) malloc(sizeof(Node));
      |               ^
list.c:41:10: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   41 |   nodo = list->head;
      |          ^~~~
list.c:42:19: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   42 |   list->current = nodo;
      |                   ^~~~
list.c:43:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   43 |   return nodo;
      |          ^~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3eceb56
Thu 23 Mar 2023 10:15:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
894c5ad
Thu 23 Mar 2023 10:17:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6246985
Thu 23 Mar 2023 10:19:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
5562d56
Thu 23 Mar 2023 10:20:18 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
df2d99e
Thu 23 Mar 2023 10:22:36 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:11: error: expected ‘{’ before ‘*’ token
   43 |     struct* nodo = (struct Node *) malloc(sizeof(Node));
      |           ^
list.c:44:5: error: ‘nodo’ undeclared (first use in this function)
   44 |     nodo = list->head;
      |     ^~~~
list.c:44:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05713e5
